added listeners to show modal

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -27,3 +27,7 @@
     background-color: var(--secondary-color);
     border-radius: 15px;
 }
+
+.modal-button {
+    background-color: var(--secondary-color);
+}
